2002-01-23  Darke  <darkepaw@users.sourceforge.net>
	* exult.cc: Fixed a compile error with people compiling using
	--enable-usecode-debugger.
	* conf/*: Fixed problem with reading spaces as '\n's. Problem was
	std::istream >> std::string, breaks on spaces and '\n's, not just
	'\n's.
	* mapedit/shapegroup.*: Fixed namespace stuff.
	* usecode/ucxt/*: Minor code cleanup.

2002-01-21  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc (ExultStudio): Open 'chunks' file in both
	binary AND input mode.
	* mapedit/shapelst.cc:  Cleaned up 'render' loop.  Fonts now
	display, somewhat.
	* xdrag.cc:  Compile err. fixed.

2002-01-21  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, windrag.*, xdrag.*, mapedit/Makefile.mingw,
	  mapedit/chunklst.cc, mapedit/eggedit.cc, mapedit/npcedit.cc
	  mapedit/objedit.cc, mapedit/shapedraw.cc: More Win32 Drag and Drop.

	* Makefile.cygwin, Makefile.win32, mapedit/Makefile.mingw, 
	  mapedit/studio.*, server/servemsg.* server/server.cc,
	  server/servewin32.*, msvcstuff/Exult.dsp : Added commincations for
	  WinNT, Win2K and WinXP Only! Win9x/Me ARE NOT SUPPORTED!

	* server/objserial.cc : Working around a MSVC compiler bug

2002-01-21  Darke  <darkepaw@users.sourceforge.net>
	* usecode/ucxt/*: Lots of code cleanup, and preperation for adding
	basic u8 disassembler functions.
	* Pawnote: Blame Fingolfin for me commiting as my alter ego. <grin>

2002-01-21  Ryan Nunn  <triforce@merlin.net.au>
	* windrag.* : Don't need GDK

2002-01-20  Ryan Nunn  <triforce@merlin.net.au>
	* data/credits.txt : Added Mark Siewert to credits for Win32 Exult
	  studio.

2002-01-20  Ryan Nunn  <triforce@merlin.net.au>
	* Makefile.cygwin, Makefile.win32, exult.cc, mapedit/Makefile.mingw,
	  mapedit/chunklst.cc, mapedit/chunklst.*, mapedit/shapelst.*,
	  mapedit/studio.cc, msvcstuff/Exult.dsp, msvcstuff/msvc_kludges.h :
	  Drag and Drop in Windows.

2002-01-20  Jeff Freedman  <jeff@amy.nerble.net>
