@@ -7,6 +7,9 @@
 	* mapedit/shapegroup.*: Fixed namespace stuff.
 	* usecode/ucxt/*: Minor code cleanup.
 
+	* conf/Configuraion.cc,config.xml: Fixed bug involving blank lines
+	before the first tag in a config file.
+
 2002-01-21  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/studio.cc (ExultStudio): Open 'chunks' file in both
